CSS/style.css
.inline-block {
    display: inline-block;
    vertical-align: top;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Space Grotesk';
    font-size: 16px;
    background-color: #FFFEFA;
  }

nav {
    background-color: #D1939A;
    box-sizing: border-box;
    margin: 0;
    font-family: "Space Grotesk";
    font-size: 20px;
    color: #272838;
    height: 100px;
    position: fixed;
    top: 0;
    width: 100%;
    padding: 20px;
}

.mainnav {
    width: 73%;
    padding: 1%;
}

nav a {
    text-decoration: none;
    color: #272838;
    text-align: right;
    position: relative; top: 0px; right: 0px;
}

nav li {
    padding: 0 10px;
}

ul {
    width: 50%;
    margin-left: auto;
}

.header-text {
    font-family: wild mango;
    font-size: 35px;
    margin-top: 85px;
    color: #272838;
    text-align: center;
    padding: 20px;
    margin-top: 150px;
}

.logo {
    width: 23%;
    margin-top: 0 auto;
}

.heroImg {
    height: auto;
    font-family: 'Space Grotesk';
    box-sizing: border-box;
    margin-bottom: 100px;
    margin-top: 30px;
    display: flex;
    justify-content: center;
}

.paragraph {
    text-align: center;
}

.header {
    height: auto;
    margin: auto 0;
    padding: 0;
}

p {
    max-width: 600px;
    margin: 0 auto;
    text-align: left;
    margin-top: 25px;
}

button {
    background-color: #272838;
    color: #ffffff;
    padding: 10px 20px;
    font-size: 18px;
    font-family: space grotesk;
    border: none;
    cursor: pointer;
    margin-top: 50px;
}

.content {
    margin: 0 auto;
    text-align: center;
    margin-top: 100px;
    max-width: 100%;
    background-image: url(../Assets/Header.jpg);
}

footer {
    background-color: transparent;
    padding: 10px;
    width: 100%;
    height: 120px;
    margin: 0;
    box-sizing: border-box;
    text-align: center;
}

footer ul {
    display: inline-block;
    vertical-align: top;
    color: #272838;
    font-family: "Space Grotesk";
    font-size: 20px;
}

footer li {
    padding: 0 10px;
}

